--- a/pom.xml
+++ b/pom.xml
@@ -100,10 +100,16 @@
 	</dependencies>
 	<distributionManagement>
     <repository>
-        <id>mule</id>
-        <name>mule</name>
+        <id>releases</id>
+        <name>Releases</name>
         <url>http://localHost:8084/nexus/repository/mule/</url>
-    </repository>	
+    </repository>
+
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>Snapshots</name>
+        <url>http://localHost:8081/nexus/repository/mule/</url>
+    </snapshotRepository>
 	</distributionManagement>
 
 	<repositories>
