--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,8 @@
             <version>${munit.version}</version>
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
-        </dependency>	<dependency>
+        </dependency>	
+        <dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>munit-tools</artifactId>
             <version>${munit.version}</version>
@@ -98,19 +99,19 @@
             <scope>test</scope>
         </dependency>
 	</dependencies>
-	<distributionManagement>
-    <repository>
-        <id>releases</id>
-        <name>Releases</name>
-        <url>http://localHost:8084/nexus/repository/mule/</url>
-    </repository>
+<!-- 	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>Releases</name>
+			<url>http://localHost:8084/nexus/repository/mule/</url>
+		</repository>
 
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>Snapshots</name>
-        <url>http://localHost:8081/nexus/repository/mule/</url>
-    </snapshotRepository>
-	</distributionManagement>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Snapshots</name>
+			<url>http://localHost:8081/nexus/repository/mule/</url>
+		</snapshotRepository>
+	</distributionManagement> -->
 
 	<repositories>
           <repository>
