--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
@@ -29,17 +28,11 @@
 					<cloudHubDeployment>
 				        <uri>https://anypoint.mulesoft.com</uri>
 				        <muleVersion>${app.runtime}</muleVersion>
-				        <username>sathybhat-cicd</username>
-				        <password>Puru@0806S</password>
+				        <username>sathyabhat-cicd</username>
+				        <password>Dell@0506S</password>
 				        <workerType>Micro</workerType>
 				        <environment>Sandbox</environment>
 				       <applicationName>${project.name}</applicationName>
-<!-- 				        <artifact>${project.build.directory}/${project.artifactId}-${project.version}-${project.packaging}.jar</artifact> -->
-<!-- 				        <properties>
-				            <env>${env.ENV_NAME}</env>
-				            <key>${env.SECURE_KEY}</key>			            
-				            						
-				        </properties> -->
 				    </cloudHubDeployment>
 				     <classifier>mule-application</classifier>
 				</configuration>
